Fixed navbar on small device.

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -47,6 +47,33 @@ footer a {
     margin: 0; /* fix alignment inside container */
   }
 }
+@media (min-width: 768px) {
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;
+  }
+}
+.dropdown-like-navbar > .dropdown-menu {
+  padding: 0;
+  margin: 0;
+  min-width: 120px;
+}
+.dropdown-like-navbar > .dropdown-menu > li > a {
+  padding: 15px;
+}
+.dropdown-like-navbar > .dropdown-menu > li.active > a {
+  color: #ffffff;
+  background-color: #272b2e;
+}
+.dropdown-like-navbar > .dropdown-menu > li > a:hover {
+  background-image: -webkit-linear-gradient(#020202, #101112 40%, #191b1d);
+  background-image: -o-linear-gradient(#020202, #101112 40%, #191b1d);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#020202), color-stop(40%, #101112), to(#191b1d));
+  background-image: linear-gradient(#020202, #101112 40%, #191b1d);
+  background-repeat: no-repeat;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff020202', endColorstr='#ff191b1d', GradientType=0);
+  -webkit-filter: none;
+  filter: none;
+}
 /* END NAVBAR */
 
 /* BEGIN LOADING-BAR */
